--- a/style.css
+++ b/style.css
@@ -24,19 +24,6 @@ body {
   background-color: var(--f);
 }
 
-body::after {
-  content: "";
-  width: 100%;
-  height: 31.9rem;
-
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-
-  background-color: var(--c);
-}
-
 .page {
   margin: auto;
   width: 38.4rem;
@@ -44,6 +31,7 @@ body::after {
 }
 
 header {
+  padding-bottom: 0.1rem;
   background-color: var(--c);
 }
 
@@ -56,8 +44,8 @@ header h1 {
   font-size: 4rem;
   line-height: 3.4rem;
   letter-spacing: 0.2rem;
-
   background-color: var(--d);
+
   padding: 0.8rem 0;
   margin: 3.2rem 0 2.9rem;
 }
@@ -67,20 +55,20 @@ header h1,
   font-family: var(--title);
 }
 
-main p {
+p {
   width: 30.5rem;
 
   font-family: var(--p);
   color: #23053a;
   text-align: center;
-  font-size: 2.0rem;
+  font-size: 2rem;
   line-height: 1.5rem;
 
-  margin: 5.0rem auto 3rem;
+  margin: 5rem auto 3rem;
 }
 
 .cards-field {
-  margin-bottom: 6.0rem;
+  margin-bottom: 6rem;
   animation: card 900ms;
 }
 
@@ -113,7 +101,7 @@ footer a {
 }
 
 footer a:hover {
-  color: #8375CE;
+  color: #8375ce;
 }
 
 @keyframes card {
